--- a/uu_unicorn_maing01-hi/package.json
+++ b/uu_unicorn_maing01-hi/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "",
   "license": "License Commercial",
-  "namespace": "UuUnicorn",
+  "namespace": "UuShoplist",
   "spec": "uu5-app; uu_appg01_devkit@5.15.4",
   "dependencies": {
     "uu5g04": "^1.57.2",
