3rd HW backend and Frontend

--- a/uu_unicorn_maing01-server/app/config/mappings.json
+++ b/uu_unicorn_maing01-server/app/config/mappings.json
@@ -35,7 +35,83 @@
         "realization": "api/controllers/JokeController.create",
         "httpMethod": "POST",
         "type": "CMD"
-      }
+      },
+      "shoppinglistList/list": {
+        "realization": "api/controllers/ShoppingListController.list",
+        "httpMethod": "GET",
+        "type": "CMD"
+      },
+       "shoppinglistList/shoppingList/create":{
+       "realization": "api/controllers/shoppingListController.createshoppingList",
+       "httpMethod": "POST",
+       "type": "CMD"
+      },
+      "shoppinglistList/shoppingList/:id/delete":{
+        "realization": "api/controllers/shoppingListController.deleteshoppingList",
+        "httpMethod": "DELETE",
+        "type": "CMD"
+       },
+       "shoppinglistList/shoppingList/:id/item/list":{
+        "realization": "api/controllers/shoppingListController.listshoppinglistItems",
+        "httpMethod": "GET",
+        "type": "CMD"
+       },
+       "shoppinglistList/shoppingList/:id/name/update":{
+        "realization": "api/controllers/shoppingListController.updateshoppinglistName",
+        "httpMethod": "PUT",
+        "type": "CMD"
+       },
+       "shoppinglistList/shoppingList/:id/archived/update":{
+        "realization": "api/controllers/shoppingListController.archiveshoppingList",
+        "httpMethod": "PUT",
+        "type": "CMD"
+       },
+       "shoppinglistList/shoppingList/archived/list":{
+        "realization": "api/controllers/shoppingListController.listArchived",
+        "httpMethod": "GET",
+        "type": "CMD"
+       },
+       "shoppinglistList/shoppingList/:id/authorizedusers/list":{
+        "realization": "api/controllers/shoppingListController.listAuthorizedusers",
+        "httpMethod": "GET",
+        "type": "CMD"
+       },
+       "shoppinglistList/shoppingList/:id/authorizedusers/create":{
+        "realization": "api/controllers/shoppingListController.createAuthorizedUsers",
+        "httpMethod": "POST",
+        "type": "CMD"
+       },
+       "shoppinglistList/shoppingList/:id/authorizedusers/:id/delete":{
+        "realization": "api/controllers/shoppingListController.deleteAuthorizedUsers",
+        "httpMethod": "DELETE",
+        "type": "CMD"
+       },
+       "shoppinglistList/shoppingList/:id/authorizedusers/:myid/delete":{
+        "realization": "api/controllers/shoppingListController.deleteAuthorizedUsers",
+        "httpMethod": "DELETE",
+        "type": "CMD"
+       },
+       "shoppinglistList/shoppingList/:id/item/create":{
+        "realization": "api/controllers/shoppingListController.createShoppingListItem",
+        "httpMethod": "POST",
+        "type": "CMD"
+       },
+       "shoppinglistList/shoppingList/:id/item/:id/delete":{
+        "realization": "api/controllers/shoppingListController.deleteShoppingListItem",
+        "httpMethod": "DELETE",
+        "type": "CMD"
+       },
+       "shoppinglistList/shoppingList/:id/item/:id/resolved/update":{
+        "realization": "api/controllers/shoppingListController.resolveshoppinglistItem",
+        "httpMethod": "PUT",
+        "type": "CMD"
+       },
+       "shoppinglistList/shoppingList/:id/item/resolved/list":{
+        "realization": "api/controllers/shoppingListController.listresolvedItems",
+        "httpMethod": "GET",
+        "type": "CMD"
+       }
     }
   }
 }
+
